// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolboxTool should render correctly 1`] = `
<button
  class="ToolBoxTool transparent"
  id="BrushTool"
  title="Brush Tool (b)"
>
  <i
    class="flaticon-small23"
  />
</button>
`;

exports[`ToolboxTool should render correctly when selected 1`] = `
<button
  class="ToolBoxTool transparent active"
  disabled=""
  id="BrushTool"
  title="Brush Tool (b)"
>
  <i
    class="flaticon-small23"
  />
</button>
`;
